<?xml version="1.0"?>
<package format="2">
  <name>ed</name>
  <version>0.0.0</version>
  <description>Environment Description (ED)</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>class_loader</depend>
  <depend>code_profiler</depend>
  <depend>cv_bridge</depend>
  <depend>ed_msgs</depend>
  <depend>ed_object_models</depend>
  <depend>geolib2</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>
  <depend>pcl_ros</depend>
  <depend>rgbd</depend>
  <depend>roscpp</depend>
  <depend>tue_config</depend>
  <depend>tue_filesystem</depend>
  <depend>tue_serialization</depend>

</package>
