<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ed</name>
  <version>0.0.0</version>
  <description>Environment Description (ED)</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>BSD-2-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>

  <depend>code_profiler</depend>
  <depend>cv_bridge</depend>
  <depend>ed_msgs</depend>
  <depend>geolib2</depend>
  <depend>kdl_parser</depend>
  <depend>libpcl-all-dev</depend>
  <depend>orocos_kdl</depend>
  <depend>pluginlib</depend>
  <depend>rgbd</depend>
  <depend>rgbd_msgs</depend>
  <depend>rosconsole_bridge</depend>
  <depend>roscpp</depend>
  <depend>sdformat</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tinyxml2</depend>
  <depend>tue_config</depend>
  <depend>tue_filesystem</depend>
  <depend>tue_serialization</depend>
  
  <exec_depend>python3-rospkg</exec_depend>
  <exec_depend>roslib</exec_depend>

  <doc_depend>doxygen</doc_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
    <ed plugin="${prefix}/plugins.xml" />
  </export>

</package>
