<?xml version="1.0"?>
<package>
  <name>ed_msgs</name>
  <version>0.0.0</version>
  <description>The ed_msgs package</description>

  <maintainer email="todo@tue.nl>TODO</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_generation</run_depend>
  run_depend>geometry_msgs</run_depend>

</package>
